[package]
name = "spatialos"
version = "0.1.1"
authors = ["Thomas Nicollet <thomas.nicollet@epitech.eu>"]
edition = "2018"
homepage = "https://github.com/Project-StarDust/spatialos-sys"
repository = "https://github.com/Project-StarDust/spatialos-sys"
description = "System crate used to link with SpatialOs libraries"
license = "GPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spatialos-sys = "0.2"
bytevec = "0.2"

